# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.1.10] - 2022-03-21
### Fixed
- Missing zip folder arguments for extraction.

## [0.1.9] - 2022-03-09
### Fixed
- alive_progress failed import exits program.
  
### Added
- function that shows progress if alive_it is found
- function that loops with no progress

## [0.1.8] - 2022-02-05
### Added
- Catch sigint and exit properly

## [0.1.7] - 2022-02-05
### Added
- Notice of paths changes for Windows users
- Check write permission error and exit
- NotADirectoryError catch during extraction
- general error catch during file extraction

### Fixed
- Windows illegal character better strip

## [0.1.6] - 2022-02-05
### Added
- TryCatch for directory creation

### Fixed
- Fixed Windows path illegal char strip
- Check for leading path slash before strip

## [0.1.5] - 2022-02-05
### Fixed
- Fixed output variable error

## [0.1.4] - 2022-02-05
### Fixed
- Fixed Window check issue
- Fixed output selection option

## [0.1.3] - 2022-02-05
### Changed
- Strip illegal path chars in Windows

## [0.1.2] - 2022-02-05
### Changed
- Changed zip file extraction bug in Windows
- Temp remove set output directory

## [0.1.1] - 2022-02-04
### Added
- Original directory structure creation function
- Local to orignal file move function
- Status bar for long process time
- python requirements file

## [0.1.0] - 2022-02-03
### Added
- This CHANGELOG based on the standard from https://keepachangelog.com/en/1.0.0/
- README about the project description and goals
- LICENSE - MIT
- ufrd2dir.py inital structure and plan